# activemq-example

./: .autotools  .cproject  .gitignore  .project  Makefile.am  README.md  configure.ac
src/: Makefile.am  activemqexample  config.cc  consumer.cc  main.cc  producer.cc
src/config/: application_config.cc  application_config.h  logger_config.cc  logger_config.h
src/gateways/activemq/: consumer.cc  consumer.h  producer.cc  producer.h
src/services/: message_processor.cc  message_processor.h
tests/: Makefile.am
tests/services/: message_processor_test.cc
tests/services/mocks/: mock_message_processor.cc  mock_message_processor.h
