AC_INIT([ActiveMQEXample],[0.0.1],[rubin.diego@gmail.com])

AM_INIT_AUTOMAKE(activemqexample,0.0.1)

AC_PROG_CC
AC_PROG_CXX

AC_PROG_INSTALL

AC_CONFIG_SRCDIR([src])
AC_CONFIG_MACRO_DIR([m4])

PKG_CHECK_MODULES([ActiveMQExample],[activemq-cpp])

AC_CONFIG_FILES([
src/Makefile
])

AC_OUTPUT(Makefile)

